--- a/.dev-suite/ticket/open/should-support-whitespace-as-placeholders.toml
+++ b/.dev-suite/ticket/open/should-support-whitespace-as-placeholders.toml
@@ -1,7 +1,10 @@
 title = 'Should support whitespace as placeholders'
 status = 'Open'
 id = '60b1ec80-3a96-11ea-b3af-5b53b89a4d91'
-assignees = []
+assignees = [[
+    '88aa5408-dcc2-42cf-9fd8-17839d2fb819',
+    'porglezomp',
+]]
 description = '''
 It would be nice to support formatting things like "0000_0000 0000_0000" since
 thats how the ISA specs we've been writing have been formatted. Should be easy
