--- a/.dev-suite/ticket/closed/allow-bitpack-to-pack-literal-bits.toml
+++ b/.dev-suite/ticket/closed/allow-bitpack-to-pack-literal-bits.toml
@@ -1,5 +1,5 @@
 title = 'Allow bitpack to pack literal bits'
-status = 'Open'
+status = 'Closed'
 id = '41798600-3abb-11ea-9c1d-ea233ed8f70d'
 assignees = []
 description = '''
