Make unused variable analysis more precise
When creating bindings, we now take an auxiliary list of variables which
should receive #[allow(unused)]. We use this to make the pattern guard
bindings unconditionally allowed to be unused, and then we check which
variables *were* used in the pattern guard with a visitor, and use that
to choose which variables should be allowed unused in the main body of
the match arm.

Fix 84beff00-3a91-11ea-9966-5ba3368310cb
"Make unused variable warnings more precise"

--- a/.dev-suite/ticket/closed/make-unused-variable-warnings-more-precise.toml
+++ b/.dev-suite/ticket/closed/make-unused-variable-warnings-more-precise.toml
@@ -1,5 +1,5 @@
 title = 'Make unused variable warnings more precise'
-status = 'Open'
+status = 'Closed'
 id = '84beff00-3a91-11ea-9966-5ba3368310cb'
 assignees = [[
     '88aa5408-dcc2-42cf-9fd8-17839d2fb819',
