--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-syn = {version = "1.0", features = ["full", "extra-traits", "visit-mut"] }
+syn = {version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
 quote = "1.0"
 boolean_expression = "0.3.9"
 proc-macro2 = "1.0"
