--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "bitmatch"
 version = "0.1.0"
 authors = ["Cassie Jones <code@witchoflight.com>"]
 edition = "2018"
+license = "MPL-2.0"
+description = "A macro to allow matching, binding, and packing the individual bits of integers."
+repository = "https://github.com/porglezomp/bitmatch"
+documentation = "https://docs.rs/crate/bitmatch"
+readme = "README.md"
+keywords = ["bitpacking", "binary", "decoder", "matching", "macro"]
+categories = ["parsing"]
 
 [lib]
 proc-macro = true
@@ -12,3 +19,7 @@ syn = {version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"
 quote = "1.0"
 boolean_expression = "0.3.10"
 proc-macro2 = "1.0"
+
+[badges]
+
+maintenance.status = "passively-maintained"
